<resources>

    <string name="app_name">J39723 Memory Game</string>
    <string name="app_title_name">J39723 Memory Game</string>

    <!-- Start of activity_main.xml strings -->
    <string name="new_game_button_text">New Game</string>
    <string name="score_board_button_text">Scoreboard</string>
    <!-- End of activity_main.xml strings -->

    <!-- Start of activity_game.xml strings -->
    <string name="timer_text">Timer:</string>
    <string name="timer_number" translatable="false">0</string>
    <!-- End of activity_game.xml strings -->

    <!-- Start of action menu items strings -->
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <!-- End of action menu items strings -->

    <!-- Start of activity_about.xml strings -->
    <string name="card1_title_text">About the App</string>
    <string name="card1_paragraph_text">This app contains a simple image matching game, where the goal is to find all the         matching images within the shortest time possible. The person with the shortest time taken to complete the game will be at the top of the leaderboards (Top 10 only).</string>
    <string name="card2_title_text">About App\'s Author</string>
    <string name="card2_paragraph_text">This app was created by Student 1626491/J39723 during 2018 with the use         of Android Studio SDK from Laksamana College of Business for the CO5025 - Further Programming and Problem Solving Course.</string>
    <string name="card3_title_text">Others</string>
    <string name="card3_paragraph_text">All images and sounds used within this app belongs to their rightful owner.         © Copyright 2018 1626491. No Rights Reserved.</string>
    <!-- End of activity_about.xml strings -->


    <!-- Strings related to login -->
    <string name="title_activity_login" translatable="false">J39723 Memory Game</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid (More than 3 characters)</string>
    <string name="error_invalid_password">This password is too short (More than 3 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updatingReport">User Created</string>
    <!-- End of Strings related to login -->

    <!-- Start of ScoreActivity Strings -->
    <string name="high_head_text">Top 10 High Scores (Shortest Time Taken)</string>
    <string name="ok">OK</string>
    <string name="score_board_title">Scoreboards</string>
    <string name="leaderboard_title">Game Leaderboards</string>
    <string name="score_empty">No Highscores… yet!</string>
    <string name="confirm_registry">User not found. Do you want to create a new user with that username and password?</string>
    <string name="logged_out_text">Logged Out</string>
    <!-- End of ScoreActivity Strings -->
    <string name="welcome_text">Welcome,</string>
    <string name="registerCancel">Registration Cancelled</string>


</resources>
